<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AstroClock</string>
    <string name="stats">Length of Day vs Length of Night</string>
    <string name="help">Help</string>
    <string name="day">Day</string>
    <string name="midday">Mid day</string>
    <string name="midnight">Mid night</string>
    <string name="daylength">Day length</string>
    <string name="nightlength">Night length</string>
    <string name="twilight">Twilight</string>
    <string name="sunrise">Sun rise</string>
    <string name="sunset">Sun set</string>
    <string name="fullmoon">Full moon</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="moons">Moons</string>
    <string name="midsummer">Mid summer</string>
    <string name="welcometitle">Introduction</string>
    <string name="welcomebody">Welcome to AstroClock. Please tap the screen to open the menu. Select location to verify your location is set accurately.\nEnable some alerts be notified of astronomical events.\nSelect your favourite theme.\nAstroClock also comes with a homescreen widget and a live wallpaper.\nThis message will not appear again.</string>
    <string name="welcomebutton">OK</string>
    
    <string name="nolocationtitle">No Location</string>
    <string name="nolocationbody">Location could not be acquired.\nEnable a location provider in the system settings to be able to acquire location.</string>
    <string name="nolocationbutton">Location Settings</string>
    
    
    <string name="helptext">AstroClock measures time by astronomical standards.\n\nThe shortest hand shows the position of the sun during a day. Unlike an normal hour hand, this hand turns only once in 24 hours.\nSmaller hands show the moments of sunrise and sunset.\n\nThe middle hand shows the phase of the moon. It turns every 29.5 days\n\nThe longest hand shows the position of the earth in its orbit around the sun. It turns every 365.25 days\n\nLike a normal clock, the hands rotate in clockwise direction.\n\nThe alarms section shows the moments of upcoming day / moon / year events. Select the checkboxes for recurring audible notifications. </string>
	<string name="aboutdev">This app has been under semi-continuous development on evenings and weekends since April 2009</string>
	<string name="credits"><b>Credits</b>\n This app would not have been possible without help of these people
	    \nMonica Baltodano for providing the only graphics set for the first 2 years
	    \nYuri Westplat who made a graphics set that went unused for nearly 2 years
	    \nGregor S staunch supporter and thorough beta tester
	    \nBarry Rijkse for providing the graphics that helped win the I\'m Watch developer competition
	    \nAilantd Sikowsky deisgner of new icon, promo graphics and beautiful theme
	    \nKostas Papageorgiou of kanguro.fi who inspired me in writing the new app description
	</string>
	<string name="maketheme">For instructions on creating your own theme please visit android.arnodenhond.com/apps/astroclock/skins</string>
	<string name="disclaimer"><b>Disclaimer</b>\nThis app does not spy or otherwise misbehave in any way. Some screens are known to show after-images when displaying the same graphics over a long period.</string>
	<string name="copyright">Arno den Hond © 2012</string>
	<string name="shareurl">Share this app to a social network</string>
	<string name="postcomment">Post a rating / comment</string>
	<string name="sendfeedback">Send your questions or suggestions.</string>
	<string name="circleplus">Cirlce AstroClock on Google+</string>
	<string name="getalarm">Get the Sunrise Alarm app</string>
	<string name="keywordshint">Sex, Drugs, Rock, Roll</string>
	<string name="keywordsheader">To develop this app I had to spend money on a new laptop and some android phones. To recover this money I have added some advertising. To reduce the irritation of this advertising you can enter some of your interests below:</string>
		
</resources>