<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill"
    android:foregroundGravity="fill" >

    <LinearLayout
        android:id="@+id/outerstats"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="fill"
        android:layout_margin="5sp"
        android:gravity="fill"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/daylength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daylength" >
        </TextView>

        <TextView
            android:id="@+id/nightlength"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nightlength" >
        </TextView>

        <!-- day -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/midday"
            android:textStyle="bold" >
        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/next"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/nextdayhours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/hours" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/last"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/lastdayhours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/hours" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <!-- moon -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/fullmoon"
            android:textStyle="bold" >
        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/next"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/nextmoondays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/days" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/last"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/lastmoondays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/days" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>

        <!-- year -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/midsummer"
            android:textStyle="bold" >
        </TextView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/next"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/nextsummerdays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/days" >
                </TextView>

                <TextView
                    android:id="@+id/nextsummermoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/moons" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/last"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/lastsummerdays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/days" >
                </TextView>

                <TextView
                    android:id="@+id/lastsummermoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5sp"
                    android:text="@string/moons" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>